+GH action, +contrib, -pkg conflicts, pretty

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,13 +6,16 @@ export(get_seascape_info)
 export(map_seascape_raster)
 export(map_seascape_wms)
 import(dplyr)
-import(glue)
 import(leafem)
 import(leaflet)
 import(lubridate)
 import(purrr)
-import(raster)
 import(rerddap)
-import(sp)
 import(stringr)
 import(tidyr)
+importFrom(glue,glue)
+importFrom(raster,crs)
+importFrom(raster,raster)
+importFrom(raster,values)
+importFrom(sp,coordinates)
+importFrom(sp,gridded)
