--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,6 +2,6 @@ pandoc: 2.7.3
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
-  intro: intro.html
-last_built: 2021-02-11T18:34Z
+  seascapeR: seascapeR.html
+last_built: 2021-02-11T19:25Z
 
