--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -40,8 +40,8 @@ jobs:
       - name: Install package
         run: |
           R CMD INSTALL .
+          # Rscript -e 'rmarkdown::render("README.Rmd")' # produce HTML output found in document targeting gfm output
           Rscript -e 'devtools::document()'
-          Rscript -e 'rmarkdown::render("README.Rmd")'
       - name: Deploy package
         run: |
           git config --local user.email "actions@github.com"
