--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,9 @@ export(get_seascape_data)
 export(get_seascape_info)
 export(map_seascape_raster)
 export(map_seascape_wms)
+export(plot_seascape_ts)
 import(dplyr)
+import(dygraphs)
 import(leafem)
 import(leaflet)
 import(lubridate)
@@ -13,9 +15,14 @@ import(purrr)
 import(rerddap)
 import(stringr)
 import(tidyr)
+importFrom(RColorBrewer,brewer.pal)
 importFrom(glue,glue)
 importFrom(raster,crs)
 importFrom(raster,raster)
 importFrom(raster,values)
 importFrom(sp,coordinates)
 importFrom(sp,gridded)
+importFrom(tabularaster,as_tibble)
+importFrom(tibble,rownames_to_column)
+importFrom(tidyr,pivot_wider)
+importFrom(xts,xts)
