+ pkg deps for plot_s_ts()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,11 +36,15 @@ Imports:
     lubridate,
     purrr,
     raster,
+    RColorBrewer,
     rerddap,
+    rgdal,
     sp,
     stringr,
+    tabularaster,
     tidyr,
-    rgdal
+    tibble,
+    xts
 Suggests: 
     knitr,
     rmarkdown
