+! extract by ply, + cache grds.tif, tbl.csv

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,11 +34,14 @@ Imports:
     leaflet,
     leafem,
     lubridate,
+    magrittr,
     purrr,
     raster,
     RColorBrewer,
+    readr,
     rerddap,
     rgdal,
+    sf,
     sp,
     stringr,
     tabularaster,
