+ nms lookup, ply st_union(), ply nms urls,

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,11 +32,14 @@ importFrom(raster,mask)
 importFrom(raster,plot)
 importFrom(raster,raster)
 importFrom(raster,values)
+importFrom(readr,cols)
 importFrom(readr,read_csv)
 importFrom(readr,write_csv)
 importFrom(sf,read_sf)
 importFrom(sf,st_as_sfc)
 importFrom(sf,st_bbox)
+importFrom(sf,st_transform)
+importFrom(sf,st_union)
 importFrom(sp,coordinates)
 importFrom(sp,gridded)
 importFrom(stringr,str_split)
