+ ss_gl_classes, plot_ss_class(), tbl_ss_class()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,11 +8,19 @@ export(get_ss_info)
 export(get_url_ply)
 export(map_ss_grd)
 export(map_ss_wms)
+export(plot_ss_class)
+export(plot_ss_class_svg)
 export(plot_ss_ts)
 export(sum_ss_grds_to_ts)
+export(tbl_ss_class)
 import(dplyr)
 import(dygraphs)
 import(fs)
+import(ggplot2)
+import(ggthemes)
+import(glue)
+import(kableExtra)
+import(knitr)
 import(leafem)
 import(leaflet)
 import(lubridate)
