plot_ss_class* -> plot_ss_class_var*

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -18,5 +18,6 @@ reference:
   contents:
   - has_concept("data")
 - title: Other
+  desc: Other functions not defined by the concepts above
   contents:
   - lacks_concepts(c("read", "analyze", "viz", "data"))
