--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,8 @@ export(get_ss_info)
 export(get_url_ply)
 export(map_ss_grd)
 export(map_ss_wms)
-export(plot_ss_class)
-export(plot_ss_class_svg)
+export(plot_ss_class_var)
+export(plot_ss_class_var_svg)
 export(plot_ss_ts)
 export(sum_ss_grds_to_ts)
 export(tbl_ss_class)
